Fixes multiples et ajout animations
Animation sur les boutons, ajout de la fonction "lighten-gradient"
Fix: Ombre header invisible sur les pages restaurant
Fix: Cartes index ont désormais une animation en vue mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,9 @@ header {
   display: flex;
   align-content: center;
   justify-content: center;
-  box-shadow: 0px 3px 5px #ccc; }
+  position: relative;
+  box-shadow: 0px 3px 5px #3131313f;
+  z-index: 100; }
   header img {
     margin-top: 15px;
     width: 200px; }
@@ -344,7 +346,9 @@ h2 {
   .btn__text {
     font-weight: 400; }
   .btn:hover {
-    cursor: pointer; }
+    cursor: pointer;
+    background: linear-gradient(#ff93e1, #a16be0);
+    box-shadow: 1px 4px 8px #a0a0a0; }
 
 .icon--purple {
   background: -webkit-linear-gradient(#9356DC, #ff60d3);
@@ -445,6 +449,9 @@ h2 {
     .card-image__info p {
       font-size: 14px;
       font-weight: 300; }
+  .card-image:hover {
+    background-color: #f4eefc;
+    box-shadow: 1px 4px 6px #ccc; }
   .card-image:last-child {
     margin-bottom: 5px; }
 
@@ -547,10 +554,6 @@ h2 {
       padding-left: 0px; }
     .card-fonctionnement h3 {
       font-size: 1em; }
-
-  .card-image:hover {
-    background-color: #f4eefc;
-    box-shadow: 1px 4px 6px #ccc; }
 
   .card-menu {
     width: calc((100% - 40px) / 3); } }
