--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,9 @@ header{
     display: flex;
     align-content: center;
     justify-content: center;
-    box-shadow: 0px 3px 5px #ccc;
+    position: relative;
+    box-shadow: 0px 3px 5px #3131313f;
+    z-index: 100;
 
     & img{
         margin-top: 15px;
