--- a/sass/utils/_functions.scss
+++ b/sass/utils/_functions.scss
@@ -1,4 +1,6 @@
-@function darken-gradient($color, $percentage){
-    $colorB: darken($color, $percentage);
-    @return linear-gradient($color, $colorB);
+@function lighten-gradient($colorA, $colorB, $percentage){
+    $colorA: lighten($colorA, $percentage);
+    $colorB: lighten($colorB, $percentage);
+
+    @return linear-gradient($colorA, $colorB);
 }
